# structy

./: .coveragerc  .gitignore  LICENSE  README.md  noxfile.py
generator/: LICENSE  README.md  pyproject.toml
generator/structy/: __init__.py  __main__.py  kinds.py  parser.py
generator/structy/templates/: __init__.py  c.source.jinja2  py.jinja2
generator/structy_generator/: __init__.py  __main__.py  kinds.py  parser.py
generator/structy_generator/templates/: __init__.py  c.header.jinja2  c.source.jinja2  js.jinja2  py.jinja2
runtimes/c/: structy.c  structy.h  structy_config_.h
runtimes/js/: structy.js
runtimes/py/: README.md  fix16.py  pyproject.toml  structy.py
runtimes/py/structy/: __init__.py  structy.py
tests/c/: fix16.h  gemsettings.c  gemsettings.h  main.c  printf.c  printf.h  structy_config.h
tests/js/: gemsettings.js  import_map.json  tests.js
tests/py/: conftest.py  gemsettings.py  test_fix16.py  test_generated.py
tests/resources/: gemsettings.structy
