[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "structy_generator"
author = "Alethea Katherine Flowers"
author-email = "thea@winterbloom.com"
home-page = "https://github.com/theacodes/structy"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["jinja2"]
description-file = "README.md"

[tool.flit.scripts]
structy = "structy_generator.__main__:main"
structy_generator = "structy_generator.__main__:main"
